<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.eventorio.app.utils.MyTextView
                android:id="@+id/tv_profile_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/profile_hint"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#aaaaaa" />

            <EditText
                android:id="@+id/et_profile_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/email" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/et_profile_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <com.eventorio.app.utils.MyButton
                android:id="@+id/btn_profile_enter"
                style="@style/button_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:text="@string/enter"
                android:textColor="@android:color/white" />

            <com.eventorio.app.utils.MyTextView
                android:id="@+id/tv_profile_remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/remember_password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/blue_calendar"
                android:textStyle="bold" />

            <com.eventorio.app.utils.MyTextView
                android:id="@+id/tv_profile_hint3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/profile_hint3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#aaaaaa" />

            <com.eventorio.app.utils.MyTextView
                android:id="@+id/tv_profile_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/register"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/red_additional_data"
                android:textStyle="bold" />

            <com.eventorio.app.utils.MyTextView
                android:id="@+id/tv_profile_hint2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/profile_hint2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#aaaaaa" />

            <com.facebook.widget.LoginButton
                android:id="@+id/authButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnTwitter"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/layers_twitter_button_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingStart="30dp"
                android:paddingRight="10dp"
                android:paddingEnd="30dp"
                android:paddingTop="10dp"
                android:text="Sign in with Twitter" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/sv_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.eventorio.app.utils.MyTextView
                android:id="@+id/tv_register_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/register_hint"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#aaaaaa"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_register_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mobile"
                android:inputType="phone" />

            <EditText
                android:id="@+id/et_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_register_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_register_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:inputType="textPassword" />
            
            <com.eventorio.app.utils.MyTextView
                android:id="@+id/tv_register_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/register_conditions"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#aaaaaa"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btn_register"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/layers_register_button_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingStart="30dp"
                android:paddingRight="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="10dp"
                android:text="Registrarme" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>