<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1276f"
    android:orientation="vertical"
    android:weightSum="100" >

    <com.eventorio.app.utils.extendedcalendarview.ExtendedCalendarView
        android:id="@+id/calendarView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="65"
        android:background="@color/white"
        android:paddingTop="10dp" >

    </com.eventorio.app.utils.extendedcalendarview.ExtendedCalendarView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/white"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/bluedot"
            android:gravity="center"
            android:text="@string/today" />
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/greendot"
            android:gravity="center"
            android:text="@string/pending" />
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/yellowdot"
            android:gravity="center"
            android:text="@string/subscribed" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/programation"
                android:textColor="@color/white" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/main_background" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>


