<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_base_calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/calendar"
        android:minHeight="30dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_navigation_previous_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/previous"
            android:paddingLeft="16dp"
            android:src="@drawable/navigation_previous_item" />

        <com.eventorio.app.utils.MyTextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/month"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/iv_navigation_next_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/next"
            android:paddingRight="16dp"
            android:src="@drawable/navigation_next_item" />
    </RelativeLayout>

    <GridView
        android:id="@+id/gv_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_base"
        android:background="@color/main_background"
        android:choiceMode="singleChoice"
        android:drawSelectorOnTop="true"
        android:horizontalSpacing="1dp"
        android:numColumns="7"
        android:stretchMode="columnWidth"
        android:verticalSpacing="1dp" >

    </GridView>

</RelativeLayout>